   missing from Octave relative to the latest verson of Matlab.</li>
   <li>ftp: New package to ftp from within Octave</li>
   <li>ocs: A new package for circuit simulation.</li>
   <li>fixed: Build fix for Unix, cygwin and mingw platforms.</li>
   <li>plot: Remove old plot code based on Xlib and replace with
   gtext, ginput and waitforbuttonpress functions that use gnuplot
   directly to obtan the required information.</li>
   <li>signal: Add the window and buffer functions. Fix tukeywin for
   odd lengths.</li>
   <li>mapping: Add the km2deg and reckon functions.</li>
   <li>image: Add the imcomplement and rgbplot functions. Support for
   bilateral filtering. Build fixes for new versions of ImageMagick.</li>
   <li>miscellaneous: Add the hex2num and num2hex functions.</li>
   <li>odepkg: Added ddaskr based solver.</li>
   <li>splines: Add the catmullrom interpolation function.</li>
   <li>financial: Add the rsindex function.</li>
   <li>time: Add the thirdwednesday function.</li>
   <li>general: Add the saveprod function.</li>
   <li>general bug fixes and improvements.</li>
</ul>
</dd>
<dt>Febrary 16, 2008</dt>
<dd>
<p>Release of Octave-forge tested against Octave 3.0. Many packages
 will also function function with earlier versions of Octave 2.9.
 Notable changes in this release include:</p>
<ul>
   <li>jhandles: More graphics properties.</li>
   <li>ad: New package for Automatic Forward Differentiation.</li>
   <li>OctGPR: New package for interpolating and smoothing scattered multidimensional
       data using Gaussian Process Regression (also known as Kriging).</li>
   <li>financial: New package.</li>
   <li>odepkg: Improvements in speed and compatibility.</li>
   <li>image: New functions: 'imfilter', and 'imsmooth'.</li>
   <li>comm: New functions: 'genqamdemod', 'deintrlv', 'randintrlv',
      'randdeintrlv', 'matdeintrlv', and 'matintrlv'.</li>
   <li>signal: New functions: 'bitrevorder'.</li>
   <li>statistics: New functions: 'random'.</li>