@@ -31,7 +31,7 @@ see the <a href="ChangeLog">ChangeLog</a>.</p>
    <li>fixed: Build fix for Unix, cygwin and mingw platforms.</li>
    <li>plot: Remove old plot code based on Xlib and replace with
    gtext, ginput and waitforbuttonpress functions that use gnuplot
-   directly to obtan the required information.</li>
+   directly to obtan the required information. Add colstyle function.</li>
    <li>signal: Add the window and buffer functions. Fix tukeywin for
    odd lengths.</li>
    <li>mapping: Add the km2deg and reckon functions.</li>
@@ -45,6 +45,9 @@ see the <a href="ChangeLog">ChangeLog</a>.</p>
    <li>general: Add the saveprod function.</li>
    <li>general bug fixes and improvements.</li>
 </ul>
+</dd>
+<dt>April 26, 2008</dt>
+<dd>Updated the OS X binary release to Octave.app 3.0.1.
 </dd>
 <dt>Febrary 16, 2008</dt>
 <dd>
@@ -66,6 +69,12 @@ see the <a href="ChangeLog">ChangeLog</a>.</p>
    <li>audio: Added audio speaker output support for MacOS X.</li>
    <li>general bug fixes and improvements.</li>
 </ul>
+</dd>
+<dt>December 28, 2007</dt>
+<dd>Updated Windows installer to Octave 3.0.0.
+</dd>
+<dt>December 23, 2007</dt>
+<dd>Updated the OS X binary release to Octave.app 3.0.0.
 </dd>
 <dt>December 14, 2007</dt>
 <dd>Updated Windows installer to Octave 2.9.19.
